--- a/roles/kubectl/defaults/main.yml
+++ b/roles/kubectl/defaults/main.yml
@@ -1,4 +1,4 @@
-kube_context: yourserver
-kube_tld: kube.examle.de
-kube_apiserver_port: 8080
-kubectl_cert_folder: "{{ansible_user_dir}}/.kube/pki/{{kube_context}}"
+kube_cluster_name: yourserver
+kube_domain: kube.examle.de
+kube_apiserver_port: 6443
+kubectl_cert_folder: "{{ansible_user_dir}}/.kube/pki/{{kube_cluster_name}}"
