--- a/roles/docker/tasks/install_debian.yml
+++ b/roles/docker/tasks/install_debian.yml
@@ -22,6 +22,11 @@
     name: docker-ce
     update_cache: true
 
+- name: enable 
+  systemd:
+    name: docker
+    enabled: true
+
 - name: create docker dropin directory
   file:
     path: /etc/systemd/system/docker.service.d
