--- a/roles/etcd/defaults/main.yml
+++ b/roles/etcd/defaults/main.yml
@@ -2,10 +2,10 @@
 etcd_port: 2379
 # etcd cluster peer port
 etcd_peer_port: 2380
+etcd_advertise_ip: "{{ansible_default_ipv4.address}}"
 
-etcd_config_folder: /etc/etcd
-etcd_cert_folder: "{{etcd_config_folder}}/certs"
-etcd_image: registry.fedoraproject.org/f27/etcd
+etcd_config_dir: /etc/etcd
+etcd_pki_dir: /etc/etcd/pki
 etcd_version: 3.3.8
 etcd_install_local_binary: false
 etcd_download_dir: "{{cache_dir | default(ansible_env.HOME)}}"
