--- a/roles/kubernetes/files/kubelet.service
+++ b/roles/kubernetes/files/kubelet.service
@@ -11,6 +11,7 @@ EnvironmentFile=-/etc/kubernetes/kubelet
 ExecStart=/usr/local/bin/kubelet \
 	    $KUBE_LOGTOSTDERR \
 	    $KUBE_LOG_LEVEL \
+		$KUBELET_CONFIG \
 	    $KUBELET_API_SERVER \
 	    $KUBELET_ADDRESS \
 	    $KUBELET_PORT \
