--- a/roles/flanneld/tasks/main.yml
+++ b/roles/flanneld/tasks/main.yml
@@ -1,7 +1,8 @@
 # install
-- name: install (Atomic)
-  include_tasks: install_atomic.yml
-  when: ansible_pkg_mgr == 'atomic_container'
+# use seperated role for summerized installation of atomic packages
+# - name: install (Atomic)
+#   include_tasks: install_atomic.yml
+#   when: ansible_pkg_mgr == 'atomic_container'
 
 - name: install (Debian)
   include_tasks: install_debian.yml
