--- a/roles/basic/tasks/atomic_rpm_install.yml
+++ b/roles/basic/tasks/atomic_rpm_install.yml
@@ -1,3 +1,20 @@
+- name: install etcd via rpm-ostree
+  include_role: 
+    name: rpm-ostree
+  vars:
+    rpm_ostree_package: etcd
+    rpm_ostree_version: "{{etcd_version}}"
+    rpm_ostree_binary_path: /usr/bin/etcd
+  when: "'kube_masters' in group_names"
+
+- name: install flanneld via rpm-ostree
+  include_role: 
+    name: rpm-ostree
+  vars:
+    rpm_ostree_package: flannel
+    rpm_ostree_version: "{{flanneld_version}}"
+    rpm_ostree_binary_path: /usr/bin/flanneld
+
 - name: install kubernetes-master via rpm-ostree
   include_role: 
     name: rpm-ostree
@@ -15,3 +32,5 @@
     rpm_ostree_version: "{{kube_version}}"
     rpm_ostree_binary_path: /usr/bin/kubelet
   when: "'kube_minions' in group_names"
+
+- meta: flush_handlers
