--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -1,8 +1,9 @@
 - block:
   # install
-  - name: install (Atomic)
-    include_tasks: install_atomic.yml
-    when: ansible_pkg_mgr == 'atomic_container'
+  # use seperated role for summerized installation of atomic packages
+  # - name: install (Atomic)
+  #   include_tasks: install_atomic.yml
+  #   when: ansible_pkg_mgr == 'atomic_container'
 
   - name: install (Debian)
     include_tasks: install_debian.yml
