--- a/roles/virt/tasks/main.yml
+++ b/roles/virt/tasks/main.yml
@@ -1,12 +1,6 @@
-- name: verify Atomic hosts
-  debug:
-    msg: virtual machine is a Atomic host
-  when: "'atomic' in hostvars[item].group_names"
-  with_items: "{{groups.virtual_machines}}"
-
-- name: download latest atomic image
+- name: "download system image"
   get_url:
-    url: "{{virt_atomic_image}}"
+    url: "{{virt_image_url}}"
     dest: "{{virt_drives_dir}}/{{virt_image}}"
     mode: 0644
     owner: libvirt-qemu
@@ -17,11 +11,11 @@
     name: python-libvirt
 
 - name: create virtual machine
-  include_tasks: vm-creation.yml
-  with_items: "{{groups.virtual_machines}}"
+  include_tasks: vm_creation.yml
+  loop: "{{groups.virtual_machines}}"
 
 - name: start virtual machine
   virt:
     name: "{{hostvars[item].vm_name}}"
     state: running
-  with_items: "{{groups.virtual_machines}}"
+  loop: "{{groups.virtual_machines}}"
