--- a/roles/flanneld/tasks/install_debian.yml
+++ b/roles/flanneld/tasks/install_debian.yml
@@ -3,7 +3,7 @@
   register: flanneld_current_version
   failed_when: false
   check_mode: false
-  changed_when: flanneld_version not in flanneld_current_version.stdout
+  changed_when: flanneld_version not in flanneld_current_version.stderr
 
 - name: "install ({{flanneld_arch | default(ansible_architecture)}})"
   get_url:
