--- a/roles/flanneld/handlers/main.yml
+++ b/roles/flanneld/handlers/main.yml
@@ -3,12 +3,32 @@
     name: flanneld
     state: restarted
     daemon_reload: true
-  when: "'kube_masters' in group_names"
+  when: "'kube_masters' in group_names and 
+        'kube_minions' not in group_names"
+
+- name: restart flanneld and docker on minions
+  systemd:
+    name: docker
+    state: stopped
+  notify: restart flanneld on minions
+  when: "'kube_minions' in group_names"
 
 - name: restart flanneld on minions
   systemd:
     name: flanneld
     state: restarted
     daemon_reload: true
-  notify: restart docker
+  notify: start docker on minions
   when: "'kube_minions' in group_names"
+
+- name: start docker on minions
+  systemd:
+    name: docker
+    state: started
+  when: "'kube_minions' in group_names"
+
+- name: restart systemd-udevd
+  systemd:
+    name: systemd-udevd
+    state: restarted
+    daemon_reload: true
