--- a/roles/kubernetes/defaults/main.yml
+++ b/roles/kubernetes/defaults/main.yml
@@ -17,6 +17,7 @@ kube_internal_domain: cluster.local
 # apiserver
 kube_apiserver_port: 6443
 kube_apiserver_insecure_port: 6444
+kube_apiserver_advertise_address: "{{internal_ip | default('')}}"
 
 # kubelet
 kube_kubelet_cgroup_driver: systemd
@@ -30,5 +31,3 @@ kube_kubelet_port: 10250
 # etcd
 etcd_port: 2379
 etcd_pki_dir: "{{kube_pki_dir}}"
-
-internal_ip: "{{ansible_default_ipv4.address}}"
