--- a/roles/kubernetes/handlers/main.yml
+++ b/roles/kubernetes/handlers/main.yml
@@ -31,3 +31,7 @@
   systemd:
     name: kube-proxy
     state: restarted
+
+- name: bootstrap cluster role bindings
+  shell: kubectl apply -f cluster-role-bindings.yml
+  become: false
