--- a/roles/rpm-ostree/tasks/main.yml
+++ b/roles/rpm-ostree/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: "check {{rpm_ostree_package}} version"
   shell: "{{rpm_ostree_binary_path}} --version"
   failed_when: false
+  check_mode: false
   changed_when: "rpm_ostree_version != '' and
                 rpm_ostree_version not in rpm_ostree_current_version.stdout and
                 rpm_ostree_version not in rpm_ostree_current_version.stderr"
