--- a/roles/kubernetes/tasks/install_atomic.yml
+++ b/roles/kubernetes/tasks/install_atomic.yml
@@ -1,17 +1,31 @@
-- name: install kubernetes-master via rpm-ostree
-  include_role: 
-    name: rpm-ostree
-  vars:
-    rpm_ostree_package: kubernetes-master
-    rpm_ostree_version: "{{kube_version}}"
-    rpm_ostree_binary_path: /usr/bin/kube-apiserver
-  when: "'kube_masters' in group_names"
+# atomic packages are installed by basic role
 
-- name: install kubernetes-node via rpm-ostree
-  include_role: 
-    name: rpm-ostree
-  vars:
-    rpm_ostree_package: kubernetes-node
-    rpm_ostree_version: "{{kube_version}}"
-    rpm_ostree_binary_path: /usr/bin/kubelet
-  when: "'kube_minions' in group_names"
+# fix for atomic 29: change cgroup driver to cgroupfs
+# will be unnecessary with kubernetes v1.10.4
+# see: https://www.projectatomic.io/blog/2018/10/fedora-atomic-28-to-29-upgrade/
+- block:
+  - name: atomic 29 fix - override kube_kubelet_cgroup_driver
+    set_fact:
+      kube_kubelet_cgroup_driver: cgroupfs
+
+  - name: atomic 29 fix - check for docker service
+    stat:
+      path: /etc/systemd/system/docker.service
+    register: atomic_29_fix
+
+  - name: atomic 29 fix - copy docker service
+    copy:
+      remote_src: true
+      src: /usr/lib/systemd/system/docker.service
+      dest: /etc/systemd/system/docker.service
+    when: not atomic_29_fix.stat.exists
+
+  - name: atomic 29 fix - set docker cgroup driver
+    replace:
+      path:  /etc/systemd/system/docker.service
+      regexp: 'native.cgroupdriver=\w+'
+      replace: "native.cgroupdriver={{kube_kubelet_cgroup_driver}}"
+    when: "ansible_distribution_major_version == '29'
+        and 'kube_minions' in group_names"
+    notify: restart docker
+  
