--- a/roles/docker/files/docker-dropin.conf
+++ b/roles/docker/files/docker-dropin.conf
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=/usr/bin/dockerd -H fd:// $DOCKER_OPTS $DOCKER_CGROUP_DRIVER
+ExecStart=/usr/bin/dockerd -H unix:// $DOCKER_OPTS $DOCKER_CGROUP_DRIVER
