move atomic-29 fix to docker role

--- a/roles/docker/tasks/install_debian.yml
+++ b/roles/docker/tasks/install_debian.yml
@@ -33,8 +33,8 @@
     state: directory
 
 - name: patch docker service
-  copy:
-    src: docker-dropin.conf
-    dest: /etc/systemd/system/docker.service.d/10-note-env-vars.conf
+  template:
+    src: docker-dropin.conf.j2
+    dest: /etc/systemd/system/docker.service.d/10-cgroup-driver.conf
   notify:
     - restart docker
