--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -3,4 +3,9 @@
   when: "ansible_os_family == 'Debian' and
         'kube_minions' in group_names"
 
+- include_tasks: atomic-29-fix.yml
+  when: "ansible_pkg_mgr == 'atomic_container'
+        and ansible_distribution_major_version == '29'
+        and 'kube_minions' in group_names"
+
 - meta: flush_handlers
